[gd_scene load_steps=8 format=3 uid="uid://c8d9x0k1m2n3p4"]

[ext_resource type="PackedScene" uid="uid://bq8x7k3m2n4p5" path="res://player.tscn" id="1_1"]
[ext_resource type="PackedScene" uid="uid://goal_door1" path="res://goal_door.tscn" id="1_5"]
[ext_resource type="Script" path="res://camera_follow.gd" id="1_2"]
[ext_resource type="Script" path="res://win_area.gd" id="1_3"]
[ext_resource type="Script" path="res://level1.gd" id="1_4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ground"]
size = Vector2(4000, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_platform"]
size = Vector2(200, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_win"]
size = Vector2(200, 50)

[node name="Main" type="Node2D"]
script = ExtResource("1_4")

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(2000, 600)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("RectangleShape2D_ground")

[node name="ColorRect" type="ColorRect" parent="Ground"]
offset_left = -2000.0
offset_top = -16.0
offset_right = 2000.0
offset_bottom = 16.0
color = Color(0.4, 0.6, 0.4, 1)

[node name="Platform1" type="StaticBody2D" parent="."]
position = Vector2(500, 550)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform1"]
shape = SubResource("RectangleShape2D_platform")
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="Platform1"]
offset_left = -100.0
offset_top = -16.0
offset_right = 100.0
offset_bottom = 16.0
color = Color(0.5, 0.5, 0.7, 1)

[node name="Platform2" type="StaticBody2D" parent="."]
position = Vector2(900, 480)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform2"]
shape = SubResource("RectangleShape2D_platform")
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="Platform2"]
offset_left = -100.0
offset_top = -16.0
offset_right = 100.0
offset_bottom = 16.0
color = Color(0.5, 0.5, 0.7, 1)

[node name="Platform3" type="StaticBody2D" parent="."]
position = Vector2(1300, 420)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform3"]
shape = SubResource("RectangleShape2D_platform")
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="Platform3"]
offset_left = -100.0
offset_top = -16.0
offset_right = 100.0
offset_bottom = 16.0
color = Color(0.5, 0.5, 0.7, 1)

[node name="Platform4" type="StaticBody2D" parent="."]
position = Vector2(1700, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform4"]
shape = SubResource("RectangleShape2D_platform")
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="Platform4"]
offset_left = -100.0
offset_top = -16.0
offset_right = 100.0
offset_bottom = 16.0
color = Color(0.5, 0.5, 0.7, 1)

[node name="Platform5" type="StaticBody2D" parent="."]
position = Vector2(2100, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform5"]
shape = SubResource("RectangleShape2D_platform")
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="Platform5"]
offset_left = -100.0
offset_top = -16.0
offset_right = 100.0
offset_bottom = 16.0
color = Color(0.5, 0.5, 0.7, 1)

[node name="Platform6" type="StaticBody2D" parent="."]
position = Vector2(2500, 380)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform6"]
shape = SubResource("RectangleShape2D_platform")
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="Platform6"]
offset_left = -100.0
offset_top = -16.0
offset_right = 100.0
offset_bottom = 16.0
color = Color(0.5, 0.5, 0.7, 1)

[node name="Platform7" type="StaticBody2D" parent="."]
position = Vector2(2900, 320)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform7"]
shape = SubResource("RectangleShape2D_platform")
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="Platform7"]
offset_left = -100.0
offset_top = -16.0
offset_right = 100.0
offset_bottom = 16.0
color = Color(0.5, 0.5, 0.7, 1)

[node name="Platform8" type="StaticBody2D" parent="."]
position = Vector2(3300, 260)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform8"]
shape = SubResource("RectangleShape2D_platform")
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="Platform8"]
offset_left = -100.0
offset_top = -16.0
offset_right = 100.0
offset_bottom = 16.0
color = Color(0.5, 0.5, 0.7, 1)

[node name="FinalPlatform" type="StaticBody2D" parent="."]
position = Vector2(3700, 200)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinalPlatform"]
shape = SubResource("RectangleShape2D_platform")
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="FinalPlatform"]
offset_left = -100.0
offset_top = -16.0
offset_right = 100.0
offset_bottom = 16.0
color = Color(0.8, 0.8, 0.2, 1)

[node name="GoalDoor" parent="FinalPlatform" instance=ExtResource("1_5")]
position = Vector2(0, -45)

[node name="Player" parent="." instance=ExtResource("1_1")]
position = Vector2(100, 550)

[node name="Camera2D" type="Camera2D" parent="Player"]
limit_left = 0
limit_right = 3900
script = ExtResource("1_2")

[node name="WinArea" type="Area2D" parent="."]
position = Vector2(3700, 150)
script = ExtResource("1_3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinArea"]
shape = SubResource("RectangleShape2D_win")

[node name="WinLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "You Win!"
horizontal_alignment = 1
vertical_alignment = 1

